--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,9 @@ body {
 .link:focus {
   color: var(--hover-color);
 }
-.link:active {
+.link.is-active{
   color: var(--hover-color);
+}
 }
 
 /* Contacts */
