--- a/css/styles.css
+++ b/css/styles.css
@@ -9,15 +9,48 @@
   --text-color: #757575;
   --white-text: #ffffff;
 }
-
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 body {
   font-family: roboto, sans-serif;
   letter-spacing: 0.03em;
   color: var(--title-color);
 }
-
+h1,
+h2,
+h3,
+p {
+  margin: 0px;
+}
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+/* Header */
 /* Logo */
+.header-page > .container {
+  display: flex;
+  align-items: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
 .logo {
+  margin-right: 93px;
+
   font-family: Raleway, sans-serif;
   text-decoration: none;
   color: inherit;
@@ -31,8 +64,19 @@ body {
 }
 
 /* Navigation */
+.menu {
+  display: inline-flex;
+}
+.menu-item:not(:last-child) {
+  margin-right: 50px;
+}
+.navigation {
+  margin-right: auto;
+}
 .list {
   list-style: none;
+  margin: 0px;
+  padding-left: 0px;
 }
 .link {
   text-decoration: none;
@@ -70,30 +114,56 @@ body {
 }
 
 /* Hero */
+.hero {
+  background-color: #2f303a;
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
 
 .hero-title {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 700px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  background-color: #2f303a;
   color: var(--white-text);
 }
 
 .button {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 32px;
+  margin-top: 30px;
+
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
+  letter-spacing: 0.06em;
   background-color: var(--hover-color);
   color: var(--white-text);
   cursor: pointer;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 /* Advantage section */
 
+.list-container {
+  display: flex;
+}
+.list-item:not(:last-child) {
+  margin-right: 30px;
+}
 .sub-title {
+  margin-bottom: 10px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -119,6 +189,8 @@ body {
 }
 
 .title {
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 42px;
@@ -127,7 +199,22 @@ body {
 }
 
 /* Team */
+.dif-section {
+  background-color: #f5f4fa;
+}
+.team-item {
+  background: #ffffff;
+  /* material shadow v1 */
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .team-sub-title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.18;
@@ -135,6 +222,8 @@ body {
   letter-spacing: 0.03em;
 }
 .team-text {
+  margin-bottom: 30px;
+
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
@@ -144,12 +233,18 @@ body {
 
 /* Footer */
 .footer-bcg {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   background-color: #2f303a;
 }
 .address {
   font-style: inherit;
 }
 .footer-logo {
+  display: inline-block;
+  margin-bottom: 20px;
+
   font-family: Raleway, sans-serif;
   text-decoration: none;
   color: var(--white-text);
@@ -157,6 +252,11 @@ body {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+}
+
+.footer-list-item {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .footer-text {
   font-size: 14px;
