--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,9 @@ h3,
 p {
   margin: 0px;
 }
+img {
+  display: block;
+}
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -46,6 +49,7 @@ p {
   align-items: center;
   padding-top: 24px;
   padding-bottom: 25px;
+  border-bottom: 1px solid #ececec;
 }
 
 .logo {
@@ -151,6 +155,7 @@ p {
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border-width: 0px;
 }
 
 /* Advantage section */
@@ -281,16 +286,37 @@ p {
 
 /*          Portfolio            */
 
+.container > .btn-list {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+.btn-item:not(:last-child) {
+  margin-right: 8px;
+}
+/* Button */
 .portfolio-button {
   font-family: inherit;
   background-color: #f5f4fa;
   color: var(--title-color);
+
   font-weight: 500;
   font-size: 16px;
+  border-width: 0px;
+
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  padding: 6px 22px;
+}
+.portfolio-button.is-active {
+  background-color: var(--hover-color);
+  color: var(--white-text);
 }
 .portfolio-button:hover {
   background-color: var(--hover-color);
@@ -299,6 +325,30 @@ p {
 .portfolio-button:active {
   background-color: var(--hover-color);
   color: var(--white-text);
+}
+
+/*Description*/
+
+.portfolio-list {
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+
+.portfolio-element {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio-element:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio-element:nth-child(n + 7) {
+  margin-bottom: 0;
+}
+.text-container {
+  border: 1px solid #eeeeee;
+  border-top: 0px;
+  padding: 20px 24px;
 }
 .portfolio-title {
   font-weight: 700;
