--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ img {
 }
 /* Header */
 /* Logo */
-.header-page > .container {
+.header-container {
   display: flex;
   align-items: center;
   padding-top: 24px;
@@ -160,6 +160,10 @@ img {
 
 /* Advantage section */
 
+.adv-section {
+  padding-bottom: 0px;
+}
+
 .list-container {
   display: flex;
 }
@@ -215,9 +219,13 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+.list-item > .text-container {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
 .team-sub-title {
-  margin-top: 30px;
+  /* margin-top: 30px; */
   margin-bottom: 10px;
 
   font-weight: 700;
@@ -227,7 +235,7 @@ img {
   letter-spacing: 0.03em;
 }
 .team-text {
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 
   font-size: 16px;
   line-height: 1.18;
