--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ img {
 }
 .team-item {
   background: #ffffff;
-  /* material shadow v1 */
+ 
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -242,6 +242,53 @@ img {
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--text-color);
+}
+
+.soc-icons{
+  list-style: none;
+  padding-left: 0px;
+  display: flex;
+  justify-content: center;
+  margin-top: 18px;
+}
+.soc-icons-link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #ffffff;
+}
+.soc-icons-item:not(:last-child){
+  margin-right: 10px;
+}
+.soc-icons-link:hover,
+.soc-icons-link:focus{
+  background-color: var(--hover-color);
+  }
+
+
+.soc-icons-svg{
+  width: 20px;
+  height: 20px;
+  fill: #AFB1B8;
+}
+  .soc-icons-link:hover > .soc-icons-svg,
+  .soc-icons-link:focus > .soc-icons-svg {
+  fill: #ffffff;
+  }
+.client-list{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.client-item{
+ width: 170px;
+ height: 90px;
+}
+.client-link{
+  
 }
 
 /* Footer */
