сделал бэкграунд героя и портфолио

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ img {
 
 /* Hero */
 .hero {
-  background-color: #2f303a;
+  background-color: #c4c4c4;
   padding-top: 200px;
   padding-bottom: 200px;
 }
@@ -144,6 +144,22 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-text);
+}
+
+.overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  /* background-image: url("../images/hero.jpg");
+  background-position: center;
+  background-size: cover; */
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero.jpg");
 }
 
 .button {
@@ -445,22 +461,26 @@ img {
   letter-spacing: 0.03em;
   cursor: pointer;
 
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   padding: 6px 22px;
 }
 .portfolio-button.is-active {
   background-color: var(--hover-color);
   color: var(--white-text);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-button:hover {
   background-color: var(--hover-color);
   color: var(--white-text);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-button:active {
   background-color: var(--hover-color);
   color: var(--white-text);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /*Description*/
@@ -497,4 +517,12 @@ img {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--text-color);
+}
+.portfolio-link {
+  text-decoration: none;
+  color: inherit;
+}
+.portfolio-element:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
