--- a/css/styles.css
+++ b/css/styles.css
@@ -203,8 +203,6 @@ img {
   border-radius: 4px;
 }
 .adv-icon {
-  width: 70px;
-  height: 70px;
 }
 .sub-title {
   margin-bottom: 10px;
@@ -285,6 +283,8 @@ img {
   display: flex;
   justify-content: center;
   margin-top: 18px;
+  margin-right: 0;
+  margin-left: 0;
 }
 .soc-icons-link {
   display: flex;
@@ -304,8 +304,8 @@ img {
 }
 
 .soc-icons-svg {
-  width: 20px;
-  height: 20px;
+  /* width: 20px;
+  height: 20px; */
   fill: #afb1b8;
 }
 .soc-icons-link:hover > .soc-icons-svg,
@@ -427,8 +427,6 @@ img {
 }
 
 .footer-socials-icons-svg {
-  width: 20px;
-  height: 20px;
   fill: #ffffff;
 }
 .footer-socials-icons-link:hover > .footer-socials-icons-svg,
@@ -464,18 +462,9 @@ img {
   border-radius: 4px;
   padding: 6px 22px;
 }
-.portfolio-button.is-active {
-  background-color: var(--hover-color);
-  color: var(--white-text);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.portfolio-button:hover {
-  background-color: var(--hover-color);
-  color: var(--white-text);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+
+.portfolio-button:hover,
+.portfolio-button.is-active,
 .portfolio-button:active {
   background-color: var(--hover-color);
   color: var(--white-text);
