--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,9 @@ img {
 /* Contacts */
 
 .contact-list {
+  display: flex;
+  align-items: center;
+
   text-decoration: none;
   color: var(--text-color);
   font-weight: 500;
@@ -286,6 +289,7 @@ img {
   display: flex;
   justify-content: center;
   margin-top: 18px;
+  margin-bottom: 0px;
   margin-right: 0;
   margin-left: 0;
 }
@@ -496,6 +500,7 @@ img {
 .text-container {
   border: 1px solid #eeeeee;
   border-top: 0px;
+  border-radius: 0px 0px 4px 4px;
   padding: 20px 24px;
 }
 .portfolio-title {
