--- a/css/styles.css
+++ b/css/styles.css
@@ -92,15 +92,38 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  position: relative;
 }
-.link:hover {
-  color: var(--hover-color);
+
+.link::after {
+  content: "";
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+
+  position: absolute;
+  bottom: -33px;
+  left: 0;
+  opacity: 0;
+
+  background-color: var(--hover-color);
 }
+.link:hover,
 .link:focus {
   color: var(--hover-color);
 }
+.link:hover::after,
+.link:focus::after {
+  opacity: 1;
+}
+
 .link.is-active {
   color: var(--hover-color);
+}
+.link.is-active::after {
+  opacity: 1;
 }
 
 /* Contacts */
@@ -223,6 +246,25 @@ img {
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--text-color);
+}
+/* Development section */
+
+.development-thumb {
+  position: relative;
+}
+.development-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 370px;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.development-title .sub-title {
+  color: var(--white-text);
+  text-align: center;
+  margin-top: 27px;
 }
 
 /* Job */
@@ -490,6 +532,39 @@ img {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-element:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-overlay {
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+
+  padding: 63px 24px;
+  text-align: left;
+
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  color: var(--white-text);
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-element:hover .portfolio-overlay {
+  transform: translateY(-100%);
 }
 .portfolio-element:nth-child(3n) {
   margin-right: 0;
@@ -519,7 +594,42 @@ img {
   text-decoration: none;
   color: inherit;
 }
-.portfolio-element:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: #fff;
+}
+.modal-btn-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  text-align: center;
+  box-sizing: border-box;
 }
