--- a/css/styles.css
+++ b/css/styles.css
@@ -710,6 +710,19 @@ img {
   border-radius: 50%;
   text-align: center;
   box-sizing: border-box;
+
+  width: 30px;
+  height: 30px;
+}
+
+.close-icon {
+  fill: #000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-close:focus-within > .close-icon,
+.modal-btn-close:hover > .close-icon {
+  fill: var(--hover-color);
 }
 .modal-title {
   font-size: 20px;
@@ -721,6 +734,7 @@ img {
 .modal-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .modal-form-field {
   display: flex;
@@ -732,6 +746,7 @@ img {
   position: absolute;
   top: 50%;
   left: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .label-name {
   font-size: 12px;
@@ -748,14 +763,98 @@ img {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+
+  padding-left: 42px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-input::placeholder {
+.modal-form-input:focus-within {
+  border: 1px solid var(--hover-color);
+}
+.modal-form-input:focus-within + .modal-icon {
+  fill: var(--hover-color);
+}
+
+.modal-textarea {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  width: 448px;
+  outline: none;
+}
+.modal-textarea:focus-within {
+  border: 1px solid var(--hover-color);
+}
+
+.modal-textarea::placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
-  padding-top: 12px;
-  padding-left: 16px;
+  padding-top: 11px;
+  padding-left: 15px;
+}
+
+.checkbox-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--text-color);
+
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.checkbox-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+
+  color: var(--hover-color);
+}
+
+.checkbox-text::before {
+  content: "";
+  width: 16px;
+  height: 15px;
+  display: inline-block;
+
+  border: 1.7px solid #212121;
+  border-radius: 2px;
+  margin-right: 8px;
+
+  position: relative;
+  top: 2px;
+}
+
+.checkbox:checked + .checkbox-text::before {
+  background-image: url(../images/icons/newicons/check.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-color: var(--hover-color);
+  border-color: var(--hover-color);
+}
+
+.submit-button {
+  width: 200px;
+  height: 50px;
+  background-color: var(--hover-color);
+
+  color: var(--white-text);
+
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.submit-button:focus,
+.submit-button:hover,
+.submit-button:active {
+  background-color: #188ce8;
 }
