--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-/* основые цвета */
-/* hover-color #2196F3
-    title-color #212121
-    text-color #757575
- */
 :root {
   --hover-color: #2196f3;
   --title-color: #212121;
@@ -44,11 +39,11 @@ img {
 }
 /* Header */
 
-.header-page {
+.header {
   border-bottom: 1px solid #ececec;
 }
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   padding-top: 24px;
@@ -56,8 +51,6 @@ img {
 }
 /* Logo */
 .logo {
-  margin-right: 93px;
-
   font-family: Raleway, sans-serif;
   text-decoration: none;
   color: inherit;
@@ -66,15 +59,18 @@ img {
   line-height: 1.2;
   letter-spacing: 0.03em;
 }
-.logo-item {
+.logo__item {
   color: var(--hover-color);
+}
+.header__logo {
+  margin-right: 93px;
 }
 
 /* Navigation */
 .menu {
   display: inline-flex;
 }
-.menu-item:not(:last-child) {
+.menu__item:not(:last-child) {
   margin-right: 50px;
 }
 .navigation {
@@ -167,7 +163,7 @@ img {
   padding-bottom: 200px;
 }
 
-.hero-title {
+.hero__title {
   margin-left: auto;
   margin-right: auto;
   max-width: 700px;
@@ -181,14 +177,11 @@ img {
   color: var(--white-text);
 }
 
-.overlay {
+.hero__overlay {
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  /* background-image: url("../images/hero.jpg");
-  background-position: center;
-  background-size: cover; */
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -198,12 +191,6 @@ img {
 }
 
 .button {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 16px 32px;
-  margin-top: 30px;
-
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -217,19 +204,27 @@ img {
   border-width: 0px;
 }
 
+.hero__button {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px 32px;
+  margin-top: 30px;
+}
+
 /* Advantage section */
 
-.adv-section {
+.advantage__section {
   padding-bottom: 0px;
 }
 
 .list-container {
   display: flex;
 }
-.list-item:not(:last-child) {
+.list__item:not(:last-child) {
   margin-right: 30px;
 }
-.icon-box {
+.advantage__icon {
   width: 270px;
   height: 120px;
   padding: 25px 100px;
@@ -237,9 +232,9 @@ img {
   background-color: #f5f4fa;
   border-radius: 4px;
 }
-.adv-icon {
+. {
 }
-.sub-title {
+.advantage__title {
   margin-bottom: 10px;
 
   font-weight: 700;
@@ -247,7 +242,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.03em;
 }
-.text {
+.advantage__text {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
@@ -271,6 +266,12 @@ img {
   color: var(--white-text);
   text-align: center;
   margin-top: 27px;
+  margin-bottom: 10px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
 }
 
 /* Job */
@@ -306,13 +307,8 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.list-item > .text-container {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
 
 .team-sub-title {
-  /* margin-top: 30px; */
   margin-bottom: 10px;
 
   font-weight: 700;
@@ -322,8 +318,6 @@ img {
   letter-spacing: 0.03em;
 }
 .team-text {
-  /* margin-bottom: 30px; */
-
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
@@ -408,20 +402,14 @@ img {
 .address {
   font-style: inherit;
 }
-.footer-logo {
+.footer__logo {
   display: inline-block;
   margin-bottom: 20px;
 
-  font-family: Raleway, sans-serif;
-  text-decoration: none;
   color: var(--white-text);
-
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
 }
 
-.footer-list-item {
+.footer-list__item {
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -646,7 +634,7 @@ img {
   border: 1px solid #eeeeee;
   border-top: 0px;
   border-radius: 0px 0px 4px 4px;
-  padding: 20px 24px;
+  padding: 30px 24px;
 }
 .portfolio-title {
   font-weight: 700;
