--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,12 +1,14 @@
 .footer__container {
   display: flex;
 }
+
 .footer__bcg {
   padding-top: 60px;
   padding-bottom: 60px;
 
   background-color: #2f303a;
 }
+
 .address {
   font-style: inherit;
 }
@@ -21,16 +23,19 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .footer__socials {
   margin-left: 70px;
   margin-bottom: 100px;
 }
+
 .footer__socials-text {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--white-text);
 }
+
 .footer__contacts {
   text-decoration: none;
   font-weight: 400;
@@ -54,9 +59,11 @@
   letter-spacing: 0.03em;
   color: var(--white-text);
 }
+
 .footer-socials-list {
   display: flex;
 }
+
 .footer__socials-icons {
   list-style: none;
   padding-left: 0px;
@@ -64,6 +71,7 @@
   justify-content: center;
   margin-top: 18px;
 }
+
 .footer__socials-icons--link {
   display: flex;
   justify-content: center;
@@ -73,6 +81,7 @@
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &:hover,
   &:focus {
     background-color: var(--hover-color);
@@ -99,12 +108,13 @@
   margin-right: 12px;
   width: 358px;
   height: 50px;
+  padding-left: 16px;
 
   background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
 
-  font-family: Roboto;
+  font-family: roboto, sans-serif;
   font-size: 16px;
   line-height: 1.25;
   color: var(--white-text);
@@ -113,6 +123,5 @@
     color: rgba(255, 255, 255, 0.6);
     font-size: 16px;
     line-height: 1.25;
-    padding-left: 16px;
   }
 }
