--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,9 +1,25 @@
 .client__list {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
-}
+  justify-content: center;
 
+  @media screen and (min-width: 480px) {
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+}
+.client__item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 480px) {
+    flex-basis: calc((100% - 2 * 30) / 2);
+  }
+}
 .client__link {
   display: flex;
   width: 170px;
