--- a/sass/layouts/_development.scss
+++ b/sass/layouts/_development.scss
@@ -1,3 +1,9 @@
+.development {
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
 .development__thumb {
   position: relative;
 }
