--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./components/title";
 @import "./components/contact-form";
 @import "./components/socials-icons";
+@import "./components/_mobile-menu";
 
 @import "./layouts/sections";
 @import "./layouts/header";
