--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  outline: 1px solid red;
 }
 
 body {
@@ -30,6 +31,8 @@ p {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .visually-hidden {
@@ -44,11 +47,30 @@ img {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .button {
@@ -120,7 +142,7 @@ img {
   text-decoration: none;
   color: var(--text-color);
   font-weight: 500;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -130,24 +152,35 @@ img {
   color: var(--hover-color);
 }
 
-.contact-list:focus .adress-icon,
-.contact-list:hover .adress-icon {
+.contact-list:focus .address-icon,
+.contact-list:hover .address-icon {
   fill: var(--hover-color);
 }
 
-.adress-icon {
+.address-icon {
   fill: var(--text-color);
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
 }
 
 .hero__title {
@@ -155,20 +188,41 @@ img {
   margin-right: auto;
   max-width: 700px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-text);
 }
 
+@media screen and (min-width: 480px) and (max-width: 1199.98px) {
+  .hero__title {
+    width: 360px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 700px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
 .advantage__title {
   margin-bottom: 10px;
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 768px) {
+  .advantage__title {
+    text-align: start;
+  }
 }
 
 .development__title {
@@ -206,12 +260,27 @@ img {
 
 .modal__window {
   position: relative;
-  width: 528px;
-  height: 581px;
+  width: 300px;
   padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   background-color: #fff;
+}
+
+@media screen and (min-width: 480px) {
+  .modal__window {
+    width: 450px;
+    max-height: 609px;
+    height: 100%;
+    overflow: scroll;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__window {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .close-button {
@@ -274,13 +343,25 @@ img {
 }
 
 .form__input {
-  width: 448px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .form__input {
+    width: 370px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form__input {
+    width: 448px;
+    height: 40px;
+  }
 }
 
 .form__input:focus-within {
@@ -294,10 +375,22 @@ img {
 .form__textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  width: 448px;
   outline: none;
   padding-top: 12px;
   padding-left: 16px;
+  width: 241px;
+}
+
+@media screen and (min-width: 480px) {
+  .form__textarea {
+    width: 370px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form__textarea {
+    width: 448px;
+  }
 }
 
 .form__textarea:focus-within {
@@ -313,8 +406,8 @@ img {
 
 .form__checkbox-label {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.66;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-color);
@@ -322,12 +415,26 @@ img {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 1200px) {
+  .form__checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
 .form__checkbox-link {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.66;
   letter-spacing: 0.03em;
   color: var(--hover-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .form__checkbox-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .form__checkbox-label::before {
@@ -405,9 +512,167 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.mobile-menu {
+  position: fixed;
+  left: 100%;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 98;
+}
+
+.mobile-menu.is-open {
+  left: 0;
+}
+
+.mobile-menu__button {
+  background-color: transparent;
+  border: none;
+  z-index: 99;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu__button {
+    display: none;
+  }
+}
+
+.mobile-menu__icon {
+  margin-right: 23px;
+  cursor: pointer;
+}
+
+.mobile-menu__icon:hover {
+  fill: var(--hover-color);
+}
+
+.mobile-menu__icon-close {
+  width: 18.67;
+  height: 18.67;
+  position: absolute;
+  top: 21px;
+  right: 25px;
+  cursor: pointer;
+}
+
+.mobile-menu__icon-close:hover {
+  fill: var(--hover-color);
+}
+
+.is-open .mobile-menu__icon {
+  display: none;
+}
+
+.mobile-menu__icon-close {
+  display: none;
+}
+
+.is-open .mobile-menu__icon-close {
+  display: block;
+}
+
+.mobile-menu__list {
+  list-style: none;
+  padding-left: 0px;
+  margin-top: 48px;
+  margin-left: 40px;
+  margin-bottom: 302px;
+}
+
+.mobile-menu__item {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--title-color);
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--hover-color);
+}
+
+.mobile-menu__contacts {
+  list-style: none;
+  padding-left: 0px;
+  margin-left: 40px;
+  margin-bottom: 64px;
+}
+
+.mobile-menu__tel {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.08;
+  letter-spacing: 0.02em;
+  color: var(--hover-color);
+  margin-bottom: 32px;
+  display: block;
+}
+
+.mobile-menu__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.mobile-menu__socials {
+  list-style: none;
+  padding: 0px;
+  margin-left: 40px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mobile-menu__socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--hover-color);
+}
+
+.mobile-menu__socials-items::after {
+  content: "|";
+  width: 1px;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: rgba(33, 33, 33, 0.2);
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+@media screen and (min-width: 480px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .header {
@@ -422,15 +687,49 @@ img {
 }
 
 .menu {
-  display: inline-flex;
+  display: none;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .menu {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu {
+    display: inline-flex;
+  }
 }
 
 .menu__item:not(:last-child) {
   margin-right: 50px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .menu__item:not(:last-child) {
+    margin-bottom: 10px;
+    margin-right: 0px;
+  }
+}
+
 .navigation {
   margin-right: auto;
+}
+
+.navigation-menu {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation-menu {
+    display: inline-flex;
+  }
+}
+
+.navigation-menu__item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .list {
@@ -495,24 +794,82 @@ img {
 }
 
 .advantage__section {
-  padding-bottom: 0px;
+  padding-bottom: 60px;
 }
 
 .list__container {
   display: flex;
+  flex-direction: column;
 }
 
-.list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .list__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
+    margin-right: -30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list__container {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    margin-bottom: 0px;
+    margin-right: 0px;
+  }
+}
+
+.list__item {
+  flex-basis: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .list__item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .list__item {
+    margin-bottom: 30px;
+    margin-right: 30px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list__item {
+    width: 270px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .advantage__icon {
-  width: 270px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 120px;
-  padding: 25px 100px;
   margin-bottom: 30px;
   background-color: #f5f4fa;
   border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) {
+  .advantage__icon {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantage__icon {
+    width: 270px;
+  }
 }
 
 .advantage__text {
@@ -520,6 +877,16 @@ img {
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--text-color);
+}
+
+.development {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .development {
+    display: block;
+  }
 }
 
 .development__thumb {
@@ -573,8 +940,27 @@ img {
 
 .client__list {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .client__list {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+}
+
+.client__item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 480px) {
+  .client__item {
+    flex-basis: calc((100% - 2 * 30) / 2);
+  }
 }
 
 .client__link {
@@ -598,12 +984,33 @@ img {
 
 .footer__container {
   display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .footer__bcg {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2f303a;
+}
+
+.footer__address {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .footer__address {
+    margin-left: 76px;
+  }
 }
 
 .address {
@@ -619,11 +1026,26 @@ img {
 .footer-list__item {
   margin-top: 10px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .footer__socials {
-  margin-left: 70px;
-  margin-bottom: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .footer__socials {
+    margin-right: 89px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__socials {
+    margin-left: 70px;
+    margin-bottom: 100px;
+  }
 }
 
 .footer__socials-text {
@@ -631,6 +1053,7 @@ img {
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--white-text);
+  text-align: center;
 }
 
 .footer__contacts {
@@ -656,6 +1079,7 @@ img {
   line-height: 16px;
   letter-spacing: 0.03em;
   color: var(--white-text);
+  text-align: center;
 }
 
 .footer-socials-list {
@@ -693,18 +1117,33 @@ img {
   fill: #ffffff;
 }
 
-.footer__form {
-  margin-left: 93px;
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .footer__form {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__form {
+    margin-left: 93px;
+  }
 }
 
 .footer__form--place {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__form--place {
+    flex-direction: row;
+  }
 }
 
 .footer__form--field {
   margin-top: 20px;
-  margin-right: 12px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   background: transparent;
@@ -722,14 +1161,26 @@ img {
   line-height: 1.25;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .footer__form--field {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__form--field {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
+
 .portfolio {
   display: inline-flex;
   flex-wrap: wrap;
 }
 
 .portfolio__element {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
+  width: 100%;
   margin-bottom: 30px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden;
@@ -743,12 +1194,30 @@ img {
   transform: translateY(-100%);
 }
 
-.portfolio__element:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio__element:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
-.portfolio__element:nth-child(n + 7) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio__element:nth-child(n + 7) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .portfolio__element {
+    margin-right: 30px;
+    width: calc((100% - 60px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__element {
+    margin-right: 30px;
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .portfolio__thumb {
@@ -799,15 +1268,32 @@ img {
 
 .button-list {
   display: flex;
-  justify-content: center;
+  justify-content: start;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 768px) {
+  .button-list {
+    justify-content: center;
+  }
 }
 
 .button-list--position {
   margin-bottom: 50px;
 }
 
-.button-list .button-list__thumb:not(:last-child) {
+.button-list__thumb:not(:last-child) {
   margin-right: 8px;
+}
+
+.button-list__thumb:nth-child(-n + 3) {
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .button-list__thumb:nth-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .button-list__item {
