--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -25,14 +25,24 @@
 
 .modal__window {
   position: relative;
-  width: 528px;
-  height: 581px;
+  width: 300px;
   padding: 40px;
-
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   background-color: #fff;
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    max-height: 609px;
+    height: 100%;
+    overflow: scroll;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 .close-button {
   position: absolute;
@@ -91,8 +101,14 @@
 }
 
 .form__input {
-  width: 448px;
   height: 40px;
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+    height: 40px;
+  }
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -112,10 +128,18 @@
 .form__textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  width: 448px;
   outline: none;
   padding-top: 12px;
   padding-left: 16px;
+  width: 241px;
+
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
 
   &:focus-within {
     border: 1px solid var(--hover-color);
@@ -132,8 +156,8 @@
 
 .form__checkbox-label {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.66;
   text-align: center;
   letter-spacing: 0.03em;
 
@@ -141,11 +165,21 @@
 
   margin-top: 20px;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .form__checkbox-link {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.66;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 
   letter-spacing: 0.03em;
 
