--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -5,7 +5,7 @@
   text-decoration: none;
   color: var(--text-color);
   font-weight: 500;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 
@@ -15,12 +15,12 @@
   &:focus {
     color: var(--hover-color);
   }
-  &:focus .adress-icon,
-  &:hover .adress-icon {
+  &:focus .address-icon,
+  &:hover .address-icon {
     fill: var(--hover-color);
   }
 }
-.adress-icon {
+.address-icon {
   fill: var(--text-color);
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
