--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,11 +1,21 @@
 .title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 
   font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
 }
 
 .hero__title {
@@ -14,21 +24,37 @@
   max-width: 700px;
 
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-text);
+
+  @media screen and (min-width: 480px) and (max-width: 1199.98px) {
+    width: 360px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 700px;
+
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .advantage__title {
   margin-bottom: 10px;
 
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
 }
 
 .development__title {
