--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -1,20 +1,68 @@
 .advantage__section {
-  padding-bottom: 0px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .list__container {
   display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
+    margin-right: -30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    margin-bottom: 0px;
+    margin-right: 0px;
+  }
 }
-.list__item:not(:last-child) {
-  margin-right: 30px;
+.list__item {
+  flex-basis: 100%;
+
+  @media screen and (min-width: 480px) {
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    margin-bottom: 30px;
+    margin-right: 30px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
+
+  &:not(:last-child) {
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
+  }
 }
 .advantage__icon {
-  width: 270px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   height: 120px;
-  padding: 25px 100px;
+
   margin-bottom: 30px;
   background-color: #f5f4fa;
   border-radius: 4px;
+
+  @media screen and (min-width: 480px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 
 .advantage__text {
