--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -1,13 +1,39 @@
 .menu {
-  display: inline-flex;
+  display: none;
+
+  @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: inline-flex;
+  }
 }
 
 .menu__item:not(:last-child) {
   margin-right: 50px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    margin-bottom: 10px;
+    margin-right: 0px;
+  }
 }
 
 .navigation {
   margin-right: auto;
+}
+
+.navigation-menu {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+  }
+}
+
+.navigation-menu__item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .list {
@@ -44,6 +70,10 @@
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    // @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    //   bottom: -54px;
+    // }
   }
 
   &:hover,
