--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -4,8 +4,8 @@
 }
 
 .portfolio__element {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
+  width: 100%;
+
   margin-bottom: 30px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden;
@@ -18,10 +18,24 @@
     transform: translateY(-100%);
   }
   &:nth-child(3n) {
-    margin-right: 0;
+    @media screen and (min-width: 1200px) {
+      margin-right: 0;
+    }
   }
   &:nth-child(n + 7) {
-    margin-bottom: 0;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    margin-right: 30px;
+    width: calc((100% - 60px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+    width: calc((100% - 60px) / 3);
   }
 }
 .portfolio__thumb {
@@ -73,14 +87,25 @@
 
 .button-list {
   display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
 
-  justify-content: center;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
 }
 .button-list--position {
   margin-bottom: 50px;
 }
-.button-list .button-list__thumb:not(:last-child) {
+.button-list__thumb:not(:last-child) {
   margin-right: 8px;
+}
+.button-list__thumb:nth-child(-n + 3) {
+  margin-bottom: 15px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
+  }
 }
 .button-list__item {
   font-family: inherit;
