--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -16,3 +16,12 @@
     ),
     url("../images/hero.jpg");
 }
+
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero__overlay {
+    background-image: ("../images/hero@2X.jpg");
+  }
+}
