--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -25,6 +25,9 @@
   @media screen and (min-width: 768px) and (max-width: 1199.98px) {
     margin-left: 76px;
   }
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+  }
 }
 
 .address {
@@ -42,6 +45,10 @@
   margin-bottom: 10px;
 
   text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 
 .footer__socials {
@@ -67,6 +74,9 @@
   color: var(--white-text);
 
   text-align: center;
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 
 .footer__contacts {
